[gd_scene load_steps=11 format=3 uid="uid://dxjki3838qj50"]

[ext_resource type="Script" uid="uid://0u3hb5roovty" path="res://scenes/game_and_players/player.gd" id="1_25pwb"]
[ext_resource type="Texture2D" uid="uid://b7y1ox38jcc05" path="res://assets/sprites/player/player_ship.png" id="1_ks7wa"]
[ext_resource type="AudioStream" uid="uid://dw0jngpjb6v4a" path="res://assets/audio/sfx/ship_damaged.wav" id="4_8ju38"]
[ext_resource type="AudioStream" uid="uid://du3ucex4dic45" path="res://assets/audio/sfx/jammed_buster_shoot.wav" id="5_bxonc"]
[ext_resource type="AudioStream" uid="uid://x17v6lchbcen" path="res://assets/audio/sfx/low_health_loop.wav" id="5_s5kyg"]
[ext_resource type="AudioStream" uid="uid://cjoc67pinxvfx" path="res://assets/audio/sfx/buster_shoot.wav" id="5_wh7ma"]

[sub_resource type="Gradient" id="Gradient_y6a2h"]
offsets = PackedFloat32Array(0.306667, 1)
colors = PackedColorArray(0.607843, 0.67451, 0.0588235, 1, 0.188235, 0.384314, 0.188235, 0)

[sub_resource type="Animation" id="Animation_oiwg6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_sbnb2"]
resource_name = "power_up_activate"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 1), Color(0.607843, 0.67451, 0.0588235, 1), Color(1, 1, 1, 1), Color(0.607843, 0.67451, 0.0588235, 1), Color(1, 1, 1, 1), Color(0.607843, 0.67451, 0.0588235, 1), Color(1, 1, 1, 1), Color(0.607843, 0.67451, 0.0588235, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x0duf"]
_data = {
&"RESET": SubResource("Animation_oiwg6"),
&"power_up_activate": SubResource("Animation_sbnb2")
}

[node name="Player" type="CharacterBody2D"]
collision_mask = 12
script = ExtResource("1_25pwb")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-3, -36, 3, -36, 23, -2, 28, 3, 28, -8, 34, -8, 34, 21, 12, 21, 12, 26, -11, 26, -11, 21, -34, 21, -34, -8, -28, -8, -28, 3, -23, -2)

[node name="ThrottleCPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(0, 25)
emitting = false
amount = 25
speed_scale = 3.0
particle_flag_align_y = true
direction = Vector2(0, 1)
spread = 50.0
gravity = Vector2(0, 0)
initial_velocity_min = 20.0
initial_velocity_max = 60.0
scale_amount_min = 3.0
scale_amount_max = 5.0
color_ramp = SubResource("Gradient_y6a2h")

[node name="PlayerSprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -5)
scale = Vector2(0.7, 0.7)
texture = ExtResource("1_ks7wa")

[node name="MuzzlePositions" type="Node2D" parent="."]

[node name="MuzzleLeftMarker2D" type="Marker2D" parent="MuzzlePositions"]
position = Vector2(-31, -10)

[node name="MuzzleRightMarker2D" type="Marker2D" parent="MuzzlePositions"]
position = Vector2(31, -10)

[node name="Audio" type="Node" parent="."]

[node name="DamagedSFX" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("4_8ju38")
volume_db = -5.0

[node name="LowHealthSFX" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("5_s5kyg")
volume_db = -6.0

[node name="LaserSFX" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("5_wh7ma")
volume_db = -12.0

[node name="JammedBusterSFX" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("5_bxonc")
volume_db = -12.0

[node name="InvincibilityTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="BusterCooldownTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_x0duf")
}

[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_invincibility_timer_timeout"]
[connection signal="timeout" from="BusterCooldownTimer" to="." method="_on_buster_cooldown_timer_timeout"]
